# RAG

./: .env.example  .gitignore  1.0 RAG_with_own_text.ipynb  2.0 RAG_with_pdf.ipynb  3.0 RAG_local_persist.ipynb  4.0 RAG_Add_Docs.ipynb  RAG.docx  pyproject.toml  requirements.txt
Vector/1f80246d-e72b-4d13-b1cb-b0f218a6ac89/: index_metadata.pickle
VectorStore/60de0da2-1251-4295-a0ea-dd562c3fd9cf/: index_metadata.pickle
