[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.14.2",
    "appnope==0.1.4",
    "asttokens==3.0.2",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "chromadb>=1.5.9",
    "comm==0.2.3",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "ipykernel==7.3.0",
    "ipython==9.15.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jiter==0.16.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.9.1",
    "jupyter-core==5.9.1",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langchain-protocol==0.0.18",
    "langchain-text-splitters==1.1.2",
    "langsmith==0.10.4",
    "matplotlib-inline==0.2.2",
    "multidict==6.7.1",
    "nest-asyncio2==1.7.2",
    "numpy==2.5.1",
    "openai==2.45.0",
    "orjson==3.11.9",
    "packaging==26.2",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.2",
    "pygments==2.20.0",
    "pypdf>=6.14.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.7.10",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.51",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tornado==6.5.7",
    "tqdm==4.68.4",
    "traitlets==5.15.1",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.17.0",
    "wcwidth==0.8.2",
    "websockets==16.1",
    "xxhash==3.8.1",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]
